[gd_scene load_steps=17 format=2]

[ext_resource path="res://common/Shake.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/textures/vfx/axe-fx.png" type="Texture" id=2]
[ext_resource path="res://plants/textures/shadow.png" type="Texture" id=3]
[ext_resource path="res://plants/ui/scene/plant_tooltip.tscn" type="PackedScene" id=4]
[ext_resource path="res://plants/textures/carrot/carrot-full-growth.png" type="Texture" id=5]
[ext_resource path="res://map/textures/objects/trees/leaf.png" type="Texture" id=6]
[ext_resource path="res://characters/stats/stats_manager.tscn" type="PackedScene" id=7]
[ext_resource path="res://plants/scripts/plant_tree.gd" type="Script" id=8]
[ext_resource path="res://ui/textures/icons/information_icon.png" type="Texture" id=9]

[sub_resource type="Curve" id=8]
min_value = -360.0
max_value = 360.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.946667, 189.818 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=7]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.17
emission_shape = 2
emission_box_extents = Vector3( 35, 38, 1 )
flag_disable_z = true
gravity = Vector3( 16, 98, 0 )
initial_velocity_random = 0.11
angular_velocity_curve = SubResource( 7 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=4]
resource_name = "die"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.8 ), Color( 1, 1, 1, 0.6 ), Color( 1, 1, 1, 0.4 ), Color( 1, 1, 1, 0.2 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="StyleBoxTexture" id=11]
texture = ExtResource( 9 )
region_rect = Rect2( 0, 0, 32, 32 )

[node name="GrownPlant" type="Node2D"]
script = ExtResource( 8 )

[node name="Shadow" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.337255 )
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -33 )
texture = ExtResource( 5 )

[node name="Particles2D" type="Particles2D" parent="Sprite"]
position = Vector2( -7, 6 )
fixed_fps = 20
process_material = SubResource( 9 )
texture = ExtResource( 6 )

[node name="Shake" parent="Sprite" instance=ExtResource( 1 )]

[node name="HarvestTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 3 )
anims/die = SubResource( 4 )

[node name="VFX_Hit" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -24 )
scale = Vector2( 1.35, 1.35 )
texture = ExtResource( 2 )
hframes = 6
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="VFX_Hit"]
anims/hit = SubResource( 10 )

[node name="Tween" type="Tween" parent="."]

[node name="AnimationStopper" type="Timer" parent="."]

[node name="StatsManager" parent="." instance=ExtResource( 7 )]

[node name="PlantTooltipHolder" type="Node2D" parent="."]
z_index = 5

[node name="PlantTooltip" parent="PlantTooltipHolder" instance=ExtResource( 4 )]
visible = false
margin_left = 16.0
margin_top = -55.0
margin_right = 16.0
margin_bottom = -55.0

[node name="TooltipCheckArea" type="Panel" parent="PlantTooltipHolder"]
margin_left = 10.0
margin_top = -11.0
margin_right = 20.0
margin_bottom = -1.0
mouse_filter = 1
custom_styles/panel = SubResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
